# casm_t3

./: .gitignore  README.md  pyproject.toml
casm_t3/: __init__.py  alerts.py  dump_reader.py  plotting.py  single_pulse.py  skypos.py
casm_t3/apps/: dump_plotter.py  janitor.py  replot.py
casm_t3/data/: beam_pointings.json
casm_t3/web/: app.py  nowpanel.py  statsplot.py
casm_t3/web/templates/: base.html  event.html  frbs.html  funnel.html  index.html  injections.html
deploy/systemd/: t3-collect.service  t3-dump-plotter-corr1.service  t3-dump-plotter-corr2.service  t3-janitor.service  t3-web.service
docs/: architecture.md  operations.md
